--- a/index.html
+++ b/index.html
@@ -3,56 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/favicon-32x32.png"
-    />
+    <link rel="stylesheet" href="./assets/favicon-32x32.png">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <script src="./script.js" defer></script>
-    <title>Frontend Mentor | Tic Tac Toe</title>
+    <title>Tic Tac Toe</title>
   </head>
   <body>
     <section id="home">
       <div class="home-header">
         <img src="./assets/icon-x.svg" alt="x-icon" />
-        <img src="./assets/icon-o.svg" alt="0-icon" />
+        <img src="./assets/icon-o.svg" alt="o-icon" />
       </div>
-      <div class="panel">
-        <h2 class="header-title title">PICK PLAYER 1’S MARK</h2>
+      <div class="home-panel">
+        <h2 class="header-title">PICK PLAYER 1'S MARK</h2>
         <div class="buttons">
-          <button class="btn-box active">
-            <svg
-              width="64"
-              height="64"
-              xmlns="http://www.w3.org/2000/svg"
-              class="x-icon"
-            >
-              <path
-                d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z"
-                fill="#a8bfc9"
-                fill-rule="evenodd"
-              />
-            </svg>
-          </button>
-          <button class="btn-box">
-            <svg
-              width="64"
-              height="64"
-              xmlns="http://www.w3.org/2000/svg"
-              class="o-icon"
-            >
-              <path
-                d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z"
-                fill="#a8bfc9"
-              />
-            </svg>
-          </button>
+          <div id="button-x btn">
+            <img src="./assets/silver-x.svg" alt="x icon">
+          </div>
+          <div id="button-o btn">
+            <img src="./assets/navy-o.svg" alt="o icon">
+          </div>
         </div>
+        <h2 class="notice">REMEMBER : X GOES FIRST</h2>
       </div>
+      <button class="game-vs-spu vs-button">
+        NEW GAME (VS CPU)
+      </button>
+      <button class="game-vs-player vs-button">
+        NEW GAME (VS PLAYER)
+      </button>
     </section>
-    <section id="board"></section>
+    <section id="board">
+    </section>
   </body>
 </html>
