finish board section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,39 @@
       </button>
     </section>
     <section id="board">
+      <div class="board-header">
+        <img src="./assets/logo.svg" alt="logo">
+        <div class="turn">
+          <img src="./assets/silver-x.svg" alt="icon x-icon">
+          <span id="turn-text">turn</span>
+        </div>
+        <div class="reset-button"></div>
+      </div>
+      <div class="main-board">
+        <div id="xo-1"></div>
+        <div id="xo-2"></div>
+        <div id="xo-3"></div>
+        <div id="xo-4"></div>
+        <div id="xo-5"></div>
+        <div id="xo-6"></div>
+        <div id="xo-7"></div>
+        <div id="xo-8"></div>
+        <div id="xo-9"></div>
+      </div>
+      <div class="score">
+        <div class="x-score">
+          <span id="x-score-text">X (p2)</span>
+          <span id="x-score-num">0</span>
+        </div>
+        <div class="ties">
+          <span id="ties-text">ties</span>
+          <span id="ties-num">0</span>
+        </div>
+        <div class="o-score">
+          <span id="o-score-text">o (p1)</span>
+          <span id="o-score-num">0</span>
+        </div>
+      </div>
     </section>
   </body>
 </html>
