finish result section

--- a/index.html
+++ b/index.html
@@ -70,5 +70,32 @@
         </div>
       </div>
     </section>
+    <section id="result">
+      <div class="result-board">
+        <h3 class="result-text">OH NO, YOU LOST…</h3>
+        <div class="o-takes">
+          <img src="/assets/icon-o.svg" alt="o icon">
+          <h2>TAKES THE ROUND</h2>
+        </div>
+        <div class="x-takes">
+          <img src="./assets/icon-x.svg" alt="x icon">
+          <h2>TAKES THE ROUND</h2>
+        </div>
+        <div class="tied">
+          <h2>Round tied</h2>
+        </div>
+        <div class="quit-or-next">
+          <button id="quit">quit</button>
+          <button id="next">NEXT ROUND</button>
+        </div>
+      </div>
+    </section>
+    <section id="restart">
+      <h3>restart game?</h3>
+      <div class="restart-buttons">
+        <button id="no">NO, CANCEL</button>
+        <button id="yes">YES, RESTART</button>
+      </div>
+    </section>
   </body>
 </html>
