--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
       </div>
     </section>
     <section id="restart">
-      <h3>restart game?</h3>
-      <div class="restart-buttons">
-        <button id="no">NO, CANCEL</button>
-        <button id="yes">YES, RESTART</button>
+      <div class="restart-board">
+        <h3>restart game?</h3>
+        <div class="restart-buttons">
+          <button id="no">NO, CANCEL</button>
+          <button id="yes">YES, RESTART</button>
+        </div>
       </div>
     </section>
   </body>
