--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
         </div>
         <div class="reset-button"></div>
       </div>
-      <div class="main-board">
-        <div id="xo" class="1 turn"></div>
-        <div id="xo" class="2 turn"></div>
-        <div id="xo" class="3 turn"></div>
-        <div id="xo" class="4 turn"></div>
-        <div id="xo" class="5 turn"></div>
-        <div id="xo" class="6 turn"></div>
-        <div id="xo" class="7 turn"></div>
-        <div id="xo" class="8 turn"></div>
-        <div id="xo" class="9 turn"></div>
+      <div class="main-board hoverX">
+        <div class="xo" id="1 "></div>
+        <div class="xo" id="2 "></div>
+        <div class="xo" id="3 "></div>
+        <div class="xo" id="4 "></div>
+        <div class="xo" id="5 "></div>
+        <div class="xo" id="6 "></div>
+        <div class="xo" id="7 "></div>
+        <div class="xo" id="8 "></div>
+        <div class="xo" id="9 "></div>
       </div>
       <div class="score">
         <div class="x-score">
