--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
     <section id="result">
       <div class="result-board">
-        <h3 class="result-text">OH NO, YOU LOST…</h3>
+        <h3 class="result-text"></h3>
         <div class="o-takes">
           <img src="/assets/icon-o.svg" alt="o icon">
           <h2>TAKES THE ROUND</h2>
